add new endpoint to fetch followed users, format some code, async syntax fix
