# controllers/FollowController.js
@@ -8,6 +8,10 @@
 
 const Controller = require('./Controller')
 const service = require('../services/FollowService')
+const apiFollowGET = async (request, response) => {
+    await Controller.handleRequest(request, response, service.apiFollowGET)
+}
+
 const apiFollowDELETE = async (request, response) => {
     await Controller.handleRequest(request, response, service.apiFollowDELETE)
 }
@@ -17,6 +21,7 @@ const apiFollowPOST = async (request, response) => {
 }
 
 module.exports = {
+    apiFollowGET,
     apiFollowDELETE,
     apiFollowPOST,
 }
